# RAG-Document-Assistant

./: .env  .env.example  README.md  document_loader.py  document_loader_chunks.py  embedding_function_chunks.py  main.py  main_new.py  main_new_1.py  pinecone_client.py  pyproject.toml  query_rag.py  rag.py  requirements.txt  store_chunks.py
